--- a/notebooks/02 - Simple CNN.ipynb
+++ b/notebooks/02 - Simple CNN.ipynb
@@ -70,6 +70,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "def get_available_gpus():\n",
+    "    local_device_protos = device_lib.list_local_devices()\n",
+    "    return [x.name for x in local_device_protos if x.device_type == 'GPU']\n",
+    "    \n",
+    "get_available_gpus()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
