add other gpu check function. add save model function

--- a/notebooks/02 - Simple CNN.ipynb
+++ b/notebooks/02 - Simple CNN.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -59,23 +59,41 @@
     "VALID_DIRECTORY = \"../data/valid/\"\n",
     "\n",
     "NUMBER_TRAIN_SAMPLES = 20000\n",
-    "NUMBER_VALIDATION_SAMPLES = 5000"
+    "NUMBER_VALIDATION_SAMPLES = 5000\n",
+    "\n",
+    "WEIGHTS_DIRECTORY = \"../weights/\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Check that we are using the GPU:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/gpu:0']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "def get_available_gpus():\n",
@@ -86,8 +104,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 22.  28.]\n",
+      " [ 49.  64.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creates a graph.\n",
+    "with tf.device('/gpu:0'):\n",
+    "  a = tf.constant([1.0, 2.0, 3.0, 4.0, 5.0, 6.0], shape=[2, 3], name='a')\n",
+    "  b = tf.constant([1.0, 2.0, 3.0, 4.0, 5.0, 6.0], shape=[3, 2], name='b')\n",
+    "  c = tf.matmul(a, b)\n",
+    "# Creates a session with log_device_placement set to True.\n",
+    "sess = tf.Session(config=tf.ConfigProto(log_device_placement=True))\n",
+    "# Runs the op.\n",
+    "print(sess.run(c))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Model"
    ]
@@ -104,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -146,9 +197,19 @@
     "                 strides=(2, 2), \n",
     "                 data_format=\"channels_last\")(x)\n",
     "\n",
+    "# Third CNN Layer\n",
+    "x = Convolution2D(128, (3, 3), \n",
+    "                  activation='relu', \n",
+    "                  data_format=\"channels_last\", \n",
+    "                  kernel_initializer=\"he_uniform\")(x)\n",
+    "x = MaxPooling2D(pool_size=(2, 2), \n",
+    "                 strides=(2, 2), \n",
+    "                 data_format=\"channels_last\")(x)\n",
+    "\n",
+    "\n",
     "x = Flatten()(x)\n",
     "\n",
-    "x = Dense(128, activation='relu',kernel_initializer=\"he_uniform\")(x)\n",
+    "x = Dense(96, activation='relu',kernel_initializer=\"he_uniform\")(x)\n",
     "predictions = Dense(2, activation='softmax')(x)\n",
     "\n",
     "model = Model(inputs=inputs, outputs=predictions)"
@@ -176,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -190,28 +251,32 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 360, 404, 3)       0         \n",
+      "input_4 (InputLayer)         (None, 360, 404, 3)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 358, 402, 16)      448       \n",
+      "conv2d_11 (Conv2D)           (None, 358, 402, 16)      448       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 178, 200, 16)      0         \n",
+      "max_pooling2d_11 (MaxPooling (None, 178, 200, 16)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 176, 198, 32)      4640      \n",
+      "conv2d_12 (Conv2D)           (None, 176, 198, 32)      4640      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 88, 99, 32)        0         \n",
+      "max_pooling2d_12 (MaxPooling (None, 88, 99, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 86, 97, 64)        18496     \n",
+      "conv2d_13 (Conv2D)           (None, 86, 97, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 43, 48, 64)        0         \n",
+      "max_pooling2d_13 (MaxPooling (None, 43, 48, 64)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 132096)            0         \n",
+      "conv2d_14 (Conv2D)           (None, 41, 46, 128)       73856     \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               16908416  \n",
+      "max_pooling2d_14 (MaxPooling (None, 20, 23, 128)       0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 129       \n",
+      "flatten_4 (Flatten)          (None, 58880)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 96)                5652576   \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 2)                 194       \n",
       "=================================================================\n",
-      "Total params: 16,932,129.0\n",
-      "Trainable params: 16,932,129.0\n",
+      "Total params: 5,750,210.0\n",
+      "Trainable params: 5,750,210.0\n",
       "Non-trainable params: 0.0\n",
       "_________________________________________________________________\n"
      ]
@@ -234,27 +299,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We are going to define two callbacks that are going to be called in the training. EarlyStopping to stop the training if its not getting better. And a tensorboard callback to log information to be used by tensorboard."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logging basic info to be used by TensorBoard to ../logs/simple_model/tensorboard. To see this log run:\n",
-      "tensorboard --logdir=../logs/simple_model/tensorboard\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.callbacks import EarlyStopping\n",
     "from keras.callbacks import TensorBoard\n",
@@ -264,26 +325,31 @@
     "\n",
     "#TensorBoard\n",
     "# run tensorboard with tensorboard --logdir=/full_path_to_your_logs\n",
-    "tensorboard_path = TENSORBOARD_DIRECTORY\n",
-    "tensorboard_logger = TensorBoard(log_dir=tensorboard_path, histogram_freq=0, write_graph=False, write_images=False)\n",
-    "print('Logging basic info to be used by TensorBoard to {}. To see this log run:'.format(tensorboard_path))\n",
-    "print('tensorboard --logdir={}'.format(tensorboard_path))\n",
+    "#tensorboard_path = TENSORBOARD_DIRECTORY\n",
+    "#tensorboard_logger = TensorBoard(log_dir=tensorboard_path, histogram_freq=0, write_graph=False, write_images=False)\n",
+    "#print('Logging basic info to be used by TensorBoard to {}. To see this log run:'.format(tensorboard_path))\n",
+    "#print('tensorboard --logdir={}'.format(tensorboard_path))\n",
     "\n",
-    "callbacks = [early_stop, tensorboard_logger]"
+    "callbacks = [early_stop]#, tensorboard_logger]"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Model Optimizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -295,9 +361,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -311,16 +379,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Compile the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -331,30 +404,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Training "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Train data generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 20000 images belonging to 2 classes.\n"
+      "Found 17500 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -372,16 +453,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Validation data generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -406,7 +492,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Model fitting"
    ]
@@ -415,9 +504,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/8\n",
+      "385s - loss: 0.6388 - acc: 0.6314 - val_loss: 0.5796 - val_acc: 0.6776\n",
+      "Epoch 2/8\n",
+      "381s - loss: 0.5556 - acc: 0.7134 - val_loss: 0.5386 - val_acc: 0.7222\n",
+      "Epoch 3/8\n"
+     ]
+    }
+   ],
    "source": [
     "# fine-tune the model\n",
     "hist = model.fit_generator(\n",
@@ -431,8 +534,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "model_save_path = WEIGHTS_DIRECTORY + 'simple_cnn_weights.h5'\n",
+    "\n",
+    "print('Saving TOP (FCN) weigths to ', model_save_path)\n",
+    "\n",
+    "model.save_weights(model_save_path, overwrite=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Training plots"
    ]
@@ -441,7 +563,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -464,7 +588,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Plot a few examples"
    ]
@@ -473,7 +600,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -482,7 +611,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Evaluate the model"
    ]
@@ -491,7 +623,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -513,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
