--- a/notebooks/01. Data loading and analysis.ipynb
+++ b/notebooks/01. Data loading and analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -13,7 +13,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /home/gabriel/Personal/jupyter/kaggle/dogsandcats/notebooks\n"
+      "Current working directory: /home/ec2-user/notebooks/dogsandcats/notebooks\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -65,6 +65,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import glob\n",
     "from PIL import Image\n",
     "\n",
     "files = glob.glob(ORIGINAL_TRAIN_DIRECTORY + '*')\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -101,38 +102,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>../data/original_train/dog.798.jpg</td>\n",
-       "      <td>293</td>\n",
-       "      <td>249</td>\n",
+       "      <td>../data/original_train/dog.11385.jpg</td>\n",
+       "      <td>372</td>\n",
+       "      <td>500</td>\n",
        "      <td>dog</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>../data/original_train/dog.10748.jpg</td>\n",
-       "      <td>301</td>\n",
-       "      <td>349</td>\n",
-       "      <td>dog</td>\n",
+       "      <td>../data/original_train/cat.12119.jpg</td>\n",
+       "      <td>499</td>\n",
+       "      <td>474</td>\n",
+       "      <td>cat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>../data/original_train/dog.8365.jpg</td>\n",
-       "      <td>375</td>\n",
-       "      <td>499</td>\n",
+       "      <td>../data/original_train/dog.2388.jpg</td>\n",
+       "      <td>270</td>\n",
+       "      <td>359</td>\n",
        "      <td>dog</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>../data/original_train/cat.3227.jpg</td>\n",
-       "      <td>443</td>\n",
-       "      <td>291</td>\n",
+       "      <td>../data/original_train/cat.2564.jpg</td>\n",
+       "      <td>143</td>\n",
+       "      <td>135</td>\n",
        "      <td>cat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>../data/original_train/dog.9597.jpg</td>\n",
-       "      <td>221</td>\n",
-       "      <td>294</td>\n",
-       "      <td>dog</td>\n",
+       "      <td>../data/original_train/cat.4640.jpg</td>\n",
+       "      <td>296</td>\n",
+       "      <td>400</td>\n",
+       "      <td>cat</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -140,14 +141,14 @@
       ],
       "text/plain": [
        "                                  fpath    h    w category\n",
-       "0    ../data/original_train/dog.798.jpg  293  249      dog\n",
-       "1  ../data/original_train/dog.10748.jpg  301  349      dog\n",
-       "2   ../data/original_train/dog.8365.jpg  375  499      dog\n",
-       "3   ../data/original_train/cat.3227.jpg  443  291      cat\n",
-       "4   ../data/original_train/dog.9597.jpg  221  294      dog"
+       "0  ../data/original_train/dog.11385.jpg  372  500      dog\n",
+       "1  ../data/original_train/cat.12119.jpg  499  474      cat\n",
+       "2   ../data/original_train/dog.2388.jpg  270  359      dog\n",
+       "3   ../data/original_train/cat.2564.jpg  143  135      cat\n",
+       "4   ../data/original_train/cat.4640.jpg  296  400      cat"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -234,7 +235,7 @@
        "max      768.000000   1050.00000"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -448,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
