add other gpu check function. add save model function

--- a/notebooks/02 - Simple CNN.ipynb
+++ b/notebooks/02 - Simple CNN.ipynb
@@ -517,7 +517,9 @@
       "385s - loss: 0.6388 - acc: 0.6314 - val_loss: 0.5796 - val_acc: 0.6776\n",
       "Epoch 2/8\n",
       "381s - loss: 0.5556 - acc: 0.7134 - val_loss: 0.5386 - val_acc: 0.7222\n",
-      "Epoch 3/8\n"
+      "Epoch 3/8\n",
+      "381s - loss: 0.4630 - acc: 0.7793 - val_loss: 0.4570 - val_acc: 0.7906\n",
+      "Epoch 4/8\n"
      ]
     }
    ],
