--- a/notebooks/02 - Simple CNN.ipynb
+++ b/notebooks/02 - Simple CNN.ipynb
@@ -551,7 +551,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
